[package]
name = "xjp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrussh = "0.33.5"
thrussh-keys = "0.21.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"
anyhow = "1.0.66"
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
dotenv = "0.15.0"
json = "0.12.4"
serde_json = "1.0.87"
chrono = "0.4.22"
